--- a/config.yaml
+++ b/config.yaml
@@ -1,7 +1,7 @@
 baseURL: https://srn221B.github.io
 languageCode: en
 defaultContentLanguage: en
-title: 467 note
+title: 467 notes
 theme: cupper-hugo-theme
 googleAnalytics: UA-123456789-1
 disqusShortname: srn221B
