--- a/.gitmodules
+++ b/.gitmodules
@@ -8,3 +8,9 @@
 [submodule "themes/cupper-hugo-theme"]
 	path = themes/cupper-hugo-theme
 	url = https://github.com/zwbetz-gh/cupper-hugo-theme.git
+[submodule "themes/liva-hugo"]
+	path = themes/liva-hugo
+	url = https://github.com/themefisher/liva-hugo
+[submodule "themes/PaperMod"]
+	path = themes/PaperMod
+	url = https://github.com/adityatelange/hugo-PaperMod.git
